...
internal fun HistoryScreenScaffold(
    onItemClick: (destination: Destination, id: String) -> Unit = { _, _ -> },
    openDrawer: () -> Unit = {},
) {

    Scaffold(
        topBar = { ScrollableTopAppBar(title = "Recent History", openDrawer = openDrawer) },
    ) {
        HistoryScreen(onItemClick)
    }
}

data class HistoricalRecord(
...
